--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "css-loader": "^5.0.0",
     "css-minimizer-webpack-plugin": "^1.1.5",
     "html-webpack-plugin": "^4.5.0",
+    "json-loader": "^0.5.7",
+    "json5-loader": "^4.0.1",
     "mini-css-extract-plugin": "^1.0.0",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
